--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "ferni-chat-expo-48",
   "version": "0.0.1",
   "private": true,
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --dev-client",
     "ios": "react-native run-ios",
     "android": "react-native run-android --active-arch-only",
     "compile": "tsc --noEmit -p . --pretty",
@@ -38,7 +37,7 @@
     "@react-navigation/native-stack": "^6.0.2",
     "apisauce": "2.1.5",
     "date-fns": "^2.29.2",
-    "expo": "^48.0.15",
+    "expo": "~48.0.18",
     "expo-application": "~5.1.1",
     "expo-constants": "~14.2.1",
     "expo-device": "~5.2.1",
@@ -46,9 +45,9 @@
     "expo-font": "~11.1.1",
     "expo-linking": "~4.0.1",
     "expo-localization": "~14.1.1",
-    "expo-modules-core": "~1.2.3",
-    "expo-splash-screen": "~0.18.1",
+    "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
+    "expo-updates": "~0.16.4",
     "firebase": "^9.22.1",
     "i18n-js": "3.9.2",
     "lodash": "^4.17.21",
@@ -59,16 +58,14 @@
     "react-native": "0.71.8",
     "react-native-bootsplash": "4.5.0",
     "react-native-gesture-handler": "~2.9.0",
-    "react-native-gifted-chat": "^2.1.0",
+    "react-native-gifted-chat": "^2.3.0",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "reactotron-mst": "3.1.4",
     "reactotron-react-js": "^3.3.7",
-    "reactotron-react-native": "5.0.3",
-    "expo-dev-client": "~2.2.1",
-    "expo-updates": "~0.16.4"
+    "reactotron-react-native": "5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -96,7 +93,6 @@
     "eslint-plugin-promise": "6.0.0",
     "eslint-plugin-react": "7.30.0",
     "eslint-plugin-react-native": "4.0.0",
-    "expo-modules-autolinking": "~1.1.0 || ~1.2.0",
     "fbjs-scripts": "3.0.1",
     "jest": "^29.2.1",
     "jest-circus": "29",
